# decentralized-chat-blockchain

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  main.py  pyproject.toml  requirements.txt  webui.py
.github/workflows/: test.yml
docs/: architecture.md  usage.md
scripts/: demo_secure_chat.py
src/: consensus.py  crypto_utils.py  network.py  node.py
src/blockchain/: block.py  blockchain.py
src/config/: config.py
src/core/: chat_node.py  node.py
src/crypto/: advanced_crypto_manager.py  crypto_manager.py  double_ratchet.py  simple_secure_channel.py
src/gossip/: gossip_protocol.py
src/incentive/: incentive_mechanism.py
src/ipfs/: ipfs_integration.py
src/multimedia/: multimedia.py
src/network/: kademlia_dht.py  nat_traversal.py  protocol.py  secure_protocol.py  tls_protocol.py
src/p2p/: node_server.py  secure_node_server.py
src/routing/: routing_manager.py
src/utils/: anti_replay.py
src/vdf/: vdf.py
src/zkp/: zkp.py
static/: script.js  style.css
tests/: debug_keys.py  final_test.py  test_blockchain.py  test_crypto_manager.py  test_gossip_protocol.py  test_incentive_mechanism.py  test_ipfs_integration.py  test_key_details.py  test_multimedia.py  test_nat_traversal.py  test_routing_manager.py  test_secure_architecture.py  test_simple_crypto.py  test_simple_fix.py  test_system.py  test_vdf.py  test_working_crypto.py  test_zkp.py
