[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "decentralized-chat-blockchain"
version = "1.0.1"
description = "A decentralized chat solution based on P2P networks, blockchain technology, and NAT traversal"
readme = "README.md"
authors = [{name = "Quaternion8192", email = "tiara-stash-suitor@duck.com"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Security :: Cryptography",
    "Topic :: System :: Distributed Computing"
]
requires-python = ">=3.9"
dependencies = [
    "cryptography>=41.0.0",
    "colorama>=0.4.6",
    "aiohttp>=3.8.0",
    "aiohttp-cors>=0.7.0,<0.8.0",
    "requests>=2.28.0",
    "pyngrok>=5.1.0",
    "ipfshttpclient>=0.7.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0"
]

[project.scripts]
decentralized-chat = "src.core.node:main"

[project.urls]
Homepage = "https://github.com/Quaternion8192/decentralized-chat-blockchain"
Repository = "https://github.com/Quaternion8192/decentralized-chat-blockchain"
Documentation = "https://github.com/Quaternion8192/decentralized-chat-blockchain#readme"
Changelog = "https://github.com/Quaternion8192/decentralized-chat-blockchain/releases"

[tool.setuptools.packages.find]
where = ["src"]
