[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "industrial-secure-chat"
version = "2.0.0"
description = "An industrial-grade secure decentralized chat solution with zero-trust architecture and censorship resistance"
readme = "README.md"
authors = [{name = "Quaternion8192", email = "tiara-stash-suitor@duck.com"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
    "Topic :: Communications :: Chat",
    "Topic :: System :: Distributed Computing",
    "Topic :: Internet"
]
requires-python = ">=3.9"
dependencies = [
    "cryptography>=41.0.0",
    "pynacl>=1.5.0",
    "aiohttp>=3.8.0",
    "aiohttp-cors>=0.7.0,<0.8.0",
    "requests>=2.28.0",
    "pyngrok>=5.1.0",
    "ipfshttpclient>=0.7.0",
    "netifaces>=0.11.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0"
]

[project.scripts]
industrial-secure-chat = "main:main"

[project.urls]
Homepage = "https://github.com/Quaternion8192/industrial-secure-chat"
Repository = "https://github.com/Quaternion8192/industrial-secure-chat"
Documentation = "https://github.com/Quaternion8192/industrial-secure-chat#readme"
Changelog = "https://github.com/Quaternion8192/industrial-secure-chat/releases"

[tool.setuptools.packages.find]
where = ["src"]